[package]
name = "eif_build"
version = "0.2.1"
publish = false

[dependencies]
sha2 = "0.9.5"
serde = { version = ">=1.0", features = ["derive"] }
serde_json = "1.0"
num-traits = "0.2"
num-derive = "0.3"
byteorder = "1.3"
clap = "3.2"
hex = "0.4"
crc = "1.8"
aws-nitro-enclaves-cose = "0.5"
aws-nitro-enclaves-image-format = "0.2.0"
openssl = "0.10"
serde_cbor = "0.11"
chrono = { version = "0.4", default-features = false, features = ["clock"]}

[[bin]]
name = "eif_build"
path = "eif_build.rs"
